CSS done exept number 9

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         newA.innerText = navname;
         nav.appendChild(newA);
       }
-      addToNav("New links");
+      // addToNav("New links");
 
       // ex-2
 
@@ -494,13 +494,13 @@
         let h3 = document.getElementsByTagName("h3")[0];
         h3.style.backgroundColor = "red";
       }
-      mainTitleChange();
+      // mainTitleChange();
+      // ex-13
       function changeJambo() {
-        let jambo = document.querySelector(".jumbotron");
-
-        console.log(jambo);
+        let jambo = document.querySelector("div.jumbotron");
+        jambo.console.log(jambo);
       }
-      changeJambo();
+      // changeJambo();
     </script>
   </body>
 </html>
