--- a/index.html
+++ b/index.html
@@ -520,7 +520,18 @@
         let search = document.querySelector("a.text-muted svg");
         search.remove();
       }
-      searchRemove();
+      // searchRemove();
+      // Ex-17
+      function paragraphTrim() {
+        let para = document.querySelectorAll(".blog-post p:nth-of-type(2)");
+        for (let i = 0; i < para.length; i++) {
+          para[i].innerText = para[i].innerText
+            .split("")
+            .splice(50, para[i].innerText.length)
+            .join("");
+        }
+      }
+      // paragraphTrim();
     </script>
   </body>
 </html>
